Fix features page alignment
In some transaltions the texts are longer and misalign the page. This
should fix it.

Fixes https://github.com/WeblateOrg/weblate/issues/1521

--- a/weblate_web/media/custom.css
+++ b/weblate_web/media/custom.css
@@ -28,9 +28,7 @@ footer li{
 .feature {
     text-align: center;
     padding: 40px;
-}
-.feature p {
-    min-height: 3em;
+    min-height: 18em;
 }
 .screenshot {
     display: inline-block;
